--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "reactapp",
+    "homepage": "https://bhuvana97.github.io/reactapp",
+   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
